package com.meyrforge.tomabien.common

object TestTags {
    const val NEW_MEDICATION_NAME = "NEW_MEDICATION_NAME"
    const val NEW_MEDICATION_GRAMMAGE = "NEW_MEDICATION_GRAMMAGE"
    const val ADD_NEW_MEDICATION = "ADD_NEW_MEDICATION"
    const val ADD_ALARM = "ADD_ALARM"
    const val TRACKER_CHECK = "TRACKER_CHECK"
    const val OPTIONAL_CHECK = "OPTIONAL_CHECK"
    const val ACTIVATE_PILL_CHECK = "ACTIVATE_PILL_CHECK"
    const val SAVE_PILL_AMOUNT = "SAVE_PILL_AMOUNT"
}