...
    NavigationBar(
        modifier = Modifier.clip(RoundedCornerShape(topStart = 10.dp, topEnd = 10.dp)),
        containerColor = NavBarColor
    ) {
        val trackerScreen = Screen.MedicationTracker
        NavigationBarItem(
            icon = { Icon(Icons.Filled.AddTask, "Seguimiento", modifier = Modifier.size(30.dp)) },
            selected = currentDestination?.hierarchy?.any { it.route == trackerScreen.route } == true,
            label = { Text("Seguimiento") },
            colors = NavigationBarItemDefaults.colors(
                unselectedIconColor = gray,
                unselectedTextColor = gray,
                indicatorColor = Color.Transparent,
...
                    restoreState = true
                }
            })

        val summaryScreen = Screen.WeeklySummary
        NavigationBarItem(
            icon = { Icon(Icons.Filled.Summarize, "Resumen", modifier = Modifier.size(30.dp)) },
            selected = currentDestination?.hierarchy?.any { it.route == summaryScreen.route } == true,
            label = { Text("Resumen de Toma") },
            colors = NavigationBarItemDefaults.colors(
                unselectedIconColor = gray,
                unselectedTextColor = gray,
                indicatorColor = Color.Transparent,
...
                    restoreState = true
                }
            })

        val myMedsScreen = Screen.MyMedications
        NavigationBarItem(
            icon = { Icon(painterResource(R.drawable.ic_pills), "Mis Medicaciones", modifier = Modifier.size(30.dp)) },
            selected = currentDestination?.hierarchy?.any { it.route == myMedsScreen.route } == true,
            label = { Text("Mis medicaciones") },
            colors = NavigationBarItemDefaults.colors(
                unselectedIconColor = gray,
                unselectedTextColor = gray,
                indicatorColor = Color.Transparent,
...
