...
                initialValue.toString() // Si es decimal como 12.5, muestra "12.5"
            }
        )
    }

    Column(horizontalAlignment = Alignment.CenterHorizontally, verticalArrangement = Arrangement.Center) {
        Text(textValue.ifEmpty { "0" }, fontSize = 40.sp, color = petroleum, modifier = Modifier.semantics{contentDescription = "Cantidad de pastillas actual"})
        Text(if (textValue == "1") "Pastilla" else "Pastillas", color = Color.White)
        HorizontalDivider(color = lightGray, thickness = 3.dp, modifier = Modifier.padding(vertical = 20.dp))
        TextField(
            modifier = Modifier.padding(bottom = 10.dp),
            value = textValue,
            onValueChange = { newValue ->
                if (newValue.isEmpty() || newValue.matches(pattern)) {
                    textValue = newValue // Actualiza el estado local directamente
                    onValueChange(newValue) // Notifica al composable padre del nuevo valor en formato String
                }
            },
            label = { Text("Nueva cantidad") },
            singleLine = true,
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
            colors = TextFieldDefaults.colors(
                unfocusedLabelColor = lightGray,
                unfocusedIndicatorColor = lightGray,
                focusedIndicatorColor = petroleum,
...
