...
                                    .background(lightGray.copy(alpha = 0.2f)),
                                contentAlignment = Alignment.Center
                            )
                            {
                                Icon(
                                    Icons.Filled.DeleteForever,
                                    "Conteo de Pastillas",
                                    tint = pink,
                                    modifier = Modifier
                                        .size(35.dp)

                                )
                            }
...
